fixed#41 changes in css to fix email & button overlap

--- a/menuplanner/web-app/css/user.css
+++ b/menuplanner/web-app/css/user.css
@@ -114,7 +114,7 @@
 #adduser ul li{clear:both;padding:10px;}
 #adduser ul li span{float:left;width:160px;text-align:right;padding-right:15px;}
 #adduser ul li label{float:left;width:550px;}
-#displayEmailAsLabel{text-align: left !important;font-weight: bold;width: 185px !important;}
+#displayEmailAsLabel{font-weight:bold;margin-right:5px;}
 /* end adduser
 
 /* start userlist  */
